[package]
name    = "ws-on-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[dependencies.ohkami]
git      = "https://github.com/ohkami-rs/ohkami"
branch   = "v0.22"
features = ["rt_worker", "ws"]

[dependencies]
console_error_panic_hook = "0.1"
serde-wasm-bindgen       = "0.6"
worker                   = "0.5"
